--- a/myshop/locale/es/LC_MESSAGES/django.po
+++ b/myshop/locale/es/LC_MESSAGES/django.po
@@ -9,15 +9,15 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-04-17 21:28+0300\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2025-04-27 15:27+0000\n"
+"Last-Translator:   <>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=n == 1 ? 0 : n != 0 && n % 1000000 == 0 ? "
-"1 : 2;\n"
+"Plural-Forms: nplurals=3; plural=n == 1 ? 0 : n != 0 && n % 1000000 == 0 ? 1 : 2;\n"
+"X-Translated-Using: django-rosetta 0.10.2\n"
 
 #: .\cart\forms.py:7 .\cart\templates\cart\detail.html:14
 msgid "Quantity"
@@ -110,7 +110,11 @@ msgid_plural ""
 "                    %(items)s items, $%(total)s\n"
 "                    "
 msgstr[0] ""
+"\n"
+"%(items)s producto, $%(total)s"
 msgstr[1] ""
+"\n"
+"%(items)s producto, $%(total)s"
 msgstr[2] ""
 
 #: .\shop\templates\shop\base.html:27
